' Generated by UML Generator
' Encoded: ZP4n2m8n38Nt_egCft9W7GL1SRh1oL4SQY_KO2ydRLHG_E_MGxJge4jfavV7bzTf51Faq7WLTyHx4qm3rfiOPoA1DWV1ohQyf3F2K6sfHh0Kh4UbEXKiYPr7QNa45mLGNfAVaBq2SRgnnN4ckGlA-_4g5Rtq7Zod74hr62nw7wE3k6rF2upHkAvvRAbMroyG_Hj4mmGOJrcXm_XWqt-owV_PvfwGfGDy-JQ6k331nUIPCcUtMcSEMS3ziimJoTPvwsWrHQxJbzu0
' URL: http://www.plantuml.com/plantuml/uml/ZP4n2m8n38Nt_egCft9W7GL1SRh1oL4SQY_KO2ydRLHG_E_MGxJge4jfavV7bzTf51Faq7WLTyHx4qm3rfiOPoA1DWV1ohQyf3F2K6sfHh0Kh4UbEXKiYPr7QNa45mLGNfAVaBq2SRgnnN4ckGlA-_4g5Rtq7Zod74hr62nw7wE3k6rF2upHkAvvRAbMroyG_Hj4mmGOJrcXm_XWqt-owV_PvfwGfGDy-JQ6k331nUIPCcUtMcSEMS3ziimJoTPvwsWrHQxJbzu0
' Generated on: 2025-12-07T23:25:05.152757

@startuml
skinparam classAttributeIconSize 0
hide circle

class Singleton2 {
  -{static} instance: Singleton2
  --
  -Singleton2()
  +{static} getInstance(): Singleton2
  +showMessage(): void
}

class Singleton1 {
  -{static} instance: Singleton1 = new Singleton1()
  --
  -Singleton1()
  +{static} getInstance(): Singleton1
  +showMessage(): void
}

class SingletonClient {
  +{static} main(args: String[]): void
}

Singleton2 *-- Singleton2
Singleton1 *-- Singleton1
@enduml